correction for protocol

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "esteem",
   "title": "Esteem",
   "version": "1.3.4",
-  "homepage": "http://themegrill.com/themes/esteem",
+  "homepage": "https://themegrill.com/themes/esteem",
   "repository": {
     "type": "git",
     "url": "git@github.com:themegrill/esteem.git"
