--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "esteem",
   "title": "Esteem",
-  "version": "1.4.6",
+  "version": "1.4.7",
   "homepage": "https://themegrill.com/themes/esteem",
   "repository": {
     "type": "git",
@@ -12,7 +12,7 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-checktextdomain": "~1.0.0",
-    "grunt-contrib-compress": "~1.2.0",
+    "grunt-contrib-compress": "^1.2.0",
     "grunt-contrib-jshint": "~1.0.0",
     "grunt-wp-i18n": "~0.5.4"
   },
