--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "grunt-checktextdomain": "~1.0.0",
     "grunt-contrib-compress": "^1.2.0",
     "grunt-contrib-jshint": "~1.0.0",
-    "grunt-wp-i18n": "~0.5.4"
+    "grunt-wp-i18n": "~0.5.4",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-rtlcss": "^1.4.1"
   },
   "engines": {
     "node": ">=0.8.0",
@@ -26,6 +28,10 @@
     "build": "npm run makepot && npm run compress"
   },
   "dependencies": {
-    "grunt-sass": "^3.1.0"
+    "browser-sync": "^2.26.14",
+    "grunt-sass": "^3.1.0",
+    "gulp": "^4.0.2",
+    "gulp-line-ending-corrector": "^1.0.3",
+    "gulp-rename": "^2.0.0"
   }
 }
